deployment/minio/kustomize/base/deployment-manifest/deployment-minio.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: minio
      annotations:
        openshift.openshift.io/restartedAt: '2024-02-14T01:41:11.328Z'
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          terminationMessagePath: /dev/termination-log
          name: minio
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 33933
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: storage
              mountPath: /storage
          terminationMessagePolicy: File
          image: 'quay.io/osclimate/minio:latest'
          args:
            - server
            - /storage
            - '--console-address=:33933'
      restartPolicy: Always
      securityContext: {}
  strategy:
    type: Recreate
