deployment/minio/kustomize/base/deployment-manifest/route-minio-api.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-api
  labels:
    app.kubernetes.io/name: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
