deployment/minio/kustomize/base/deployment-manifest/route-minio.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: 33933
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
